# aws-lambda-demo

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
src/: main.py
tf/: main.tf
