[tool.poetry]
name = "aws-lambda-demo"
version = "1.1.0"
description = "a test package to deploy an aws lambda function"
authors = ["Guillaume Gonde <guillaume.gonde@sicara.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
cffi = "1.16.0"
cryptography = "42.0.7"
pycparser = "2.22"

[tool.commitizen]
version = "1.1.0"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
